--- a/style.css
+++ b/style.css
@@ -59,7 +59,9 @@ p, h1, h2, h3, h4, h5, h6 {
 --Off-black: hsl(0, 0%, 8%);
 }
 
-.arrow{
+
+
+.flex-group{
   display:flex;
   justify-content: center;
   align-content: center;
@@ -70,4 +72,15 @@ p, h1, h2, h3, h4, h5, h6 {
   height:1px;
   border:black 1px solid;
   margin:1.5em auto;
+}
+/* general styling*/
+
+body{
+
+padding:2em;
+
+}
+
+div .flex-group{
+  flex-direction: column;
 }
