--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ p, h1, h2, h3, h4, h5, h6 {
 
 
 /*--css variables--*/
-.root{
+:root{
 
 --Purple: hsl(259, 100%, 65%);
 --Light-red: hsl(0, 100%, 67%);
@@ -63,24 +63,47 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .flex-group{
   display:flex;
-  justify-content: center;
-  align-content: center;
+  
+  
+  
+  
 
 }
-.hline{
+/* .hline{
   width: 100%;
   height:1px;
   border:black 1px solid;
   margin:1.5em auto;
-}
+} */
 /* general styling*/
 
 body{
+  background-color: var(--Off-white);
+  margin:1rem;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
 
-padding:2em;
+.card{
+  --padding:0.75rem;
+  --spacing:.5rem;
+  border-radius: 0.75rem;
+  overflow:hidden;
+  background-color: var(--White);
+  /* max-width:500px; */
+  ;
+  }
+.age_data{
+display: flex;
+flex-direction: column;
+overflow: hidden;
 
 }
 
-div .flex-group{
-  flex-direction: column;
+.age_input{
+  display:flex;
+  justify-content: space-between;
+  padding:var(--spacing);
 }
