--- a/style.css
+++ b/style.css
@@ -69,12 +69,13 @@ p, h1, h2, h3, h4, h5, h6 {
   
 
 }
-/* .hline{
+ .hline{
+  position: absolute;
+  top: 18
+  height: 5px;
   width: 100%;
-  height:1px;
-  border:black 1px solid;
-  margin:1.5em auto;
-} */
+  background-color: black;
+}
 /* general styling*/
 
 body{
@@ -100,10 +101,4 @@ display: flex;
 flex-direction: column;
 overflow: hidden;
 
-}
-
-.age_input{
-  display:flex;
-  justify-content: space-between;
-  padding:var(--spacing);
 }
